# Smart-Contract-Verification

./: .gitignore  README.md
lab1/: README.md
lab1/CBMC_Example/: README.md  example.c  output.txt
lab1/HelloGreeting/: README.md  hello_greeting.sol
lab1/SumToN/: README.md  sum-to-change.asm  sum-to-change.op  sum-to-change.op.split  sum-to-change.sol  sum-to-n.asm  sum-to-n.c  sum-to-n.op  sum-to-n.op.split  sum-to-n.sol
lab1/SumToN/ConvertedSumToN/: .main.c.swp  CMakeLists.txt  contract_semantics.c  main.c
lab2/: README.md
lab2/ArrayBounds/: README.md  array-bounds.asm  array-bounds.c  array-bounds.sol
lab2/ArrayBounds/ConvertedArrayBounds_DynamicRuntimeMemory/: CMakeLists.txt  contract_semantics.c  main.c
lab2/ArrayBounds/ConvertedArrayBounds_FixedCompileTimeMemory/: CMakeLists.txt  contract_semantics.c  main.c
lab2/Coin/: README.md  coin.asm  coin.sol  coin_change.asm  coin_change.sol
lab2/DivByZero/: DivByZero.asm  DivByZero.sol  README.md  div-by-zero.c
lab3/: README.md
lab3/DAO/: DAO-Converted.c  ManagedAccount.bytecode  README.md  dao_notes.txt
lab3/EVM_To_C/: main.py  myfile_small.txt  opcode_values.py
lab3/Mutex/: README.md  mutex.asm  mutex.sol
lab3/SendBalance/: Converted_send_balance.c  README.md  exploit_send_balance.sol  send_balance.bytecode  send_balance.sol
lab3/SimpleFund/: README.md  fund_fixed.asm  fund_fixed.sol  fund_fixed_simple.asm  fund_fixed_simple.sol  fund_vulnerable.asm  fund_vulnerable.sol  fund_vulnerable_simple.asm  fund_vulnerable_simple.sol
lab3/SimpleFundNonDet/: README.md  fund_key.asm  fund_key.sol
(+34 files in other folders)
